[package]
name = "pollis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pollis_core"
# cdylib for Android (.so loaded by JNI), staticlib for iOS xcframework,
# rlib so the desktop src-tauri crate can depend on us as a normal Rust lib.
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["media", "os-keystore"]
# When enabled, emits a `uniffi-bindgen` bin target so we can run the
# binding generator without installing a separate crate.
cli = ["uniffi/cli"]
# OS keychain backend (release desktop: macOS Keychain / Windows Credential
# Manager / Linux Secret Service). ON by default. Pulls in `keyring`, which
# unconditionally links `dbus-secret-service -> dbus -> libdbus-sys` (the
# system `dbus-1` C lib) even in debug/test builds where the runtime backend
# is the file store — so a headless box with no `dbus-1` still fails to link.
# Turning this OFF (`--no-default-features`) drops the `keyring` dependency and
# forces the file-backed keystore everywhere. A normal RELEASE desktop build
# keeps default features, so its OS-keychain path is bit-for-bit unchanged.
os-keystore = ["dep:keyring"]
# Exposes test helpers (Config::for_test, InMemoryKeystore) for the
# integration harness in src-tauri/tests/flows.rs.
test-harness = []
# Desktop real-time media stack: LiveKit engine + libwebrtc, host audio I/O
# (cpal/rodio), and the WebRTC AudioProcessing module. Selects EXACTLY the
# modules + deps a non-mobile desktop build gets today; turning it OFF reaches
# the same stub surface the iOS/Android build reaches via `cfg(any(ios,
# android))`. This feature exists because a `[target.'cfg(...)']` table cannot
# evaluate `feature = ...`, so the carve-out mobile drives through target_os is
# instead drivable on a Linux desktop (e.g. headless CI with no ALSA / no C++
# media toolchain) by building `--no-default-features`.
#
# `webrtc-audio-processing` is enabled here too, but the dep itself stays
# target-gated to non-Windows/non-mobile below (its bundled meson+abseil C++
# build has no MSVC/NDK path). `dep:` referencing a target-scoped optional dep
# is a no-op on excluded targets, so a Windows/mobile `media` build still omits
# it — preserving today's platform matrix exactly.
media = [
    "dep:livekit",
    "dep:libwebrtc",
    "dep:cpal",
    "dep:rodio",
    "dep:webrtc-audio-processing",
]

[dependencies]
uniffi = { version = "0.31", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "time", "macros", "io-util", "net", "process", "signal"] }
async-trait = "0.1"
# NOTE: rusqlite is declared *per target* below — desktop links the system
# libcrypto via `bundled-sqlcipher`, mobile vendors OpenSSL into SQLCipher
# via `bundled-sqlcipher-vendored-openssl`. Both feature sets share the
# `libsqlite3-sys` build, but on desktop the vendored openssl-sys collides
# with libwebrtc-sys's bundled BoringSSL (duplicate `PKCS8_*` symbols at
# link), so we keep system OpenSSL for the desktop link. NDK builds have
# no system libcrypto, hence vendored on mobile.
libsql = { version = "0.9", features = ["remote"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
# Optional — pulled in only by the `os-keystore` feature (on by default). See
# the feature comment above: keyring hard-links `libdbus-sys` on Linux, so the
# headless/box build drops it via `--no-default-features` and uses the file
# store. Feature-on cfg reproduces today's desktop keychain build exactly.
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native", "crypto-rust"], optional = true }
base64 = "0.22"
hex = "0.4"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
# `socks` enables `Proxy::all("socks5h://…")` so `pollis_relay::http::http_client`
# can point control-plane HTTP at the loopback overlay shim (proxy-side DNS). OFF
# by default at runtime — an unset `POLLIS_OVERLAY` builds a proxy-less client, so
# enabling the feature changes nothing until the overlay is turned on.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
anyhow = "1"
# Closed-overlay relay transport (design `docs/relay-overlay-design.md` §14).
# Depended on UNCONDITIONALLY — the overlay is compiled into every consumer but
# stays INERT unless `POLLIS_OVERLAY` selects a non-off mode at runtime (§14.0).
pollis-relay = { path = "../pollis-relay" }
# The offline device-certificate primitive (payload format + verification),
# shared verbatim with pollis-relay so the relay's handshake and pollis-core's
# MLS accept path can never drift. pollis-core mints certs; pollis-relay verifies
# them. Kept in its own tiny crate to avoid a cycle (pollis-relay must not depend
# on pollis-core) — see the crate's module docs and §11.1.
pollis-device-cert = { path = "../pollis-device-cert" }
# The libsql connector that routes Turso's Hrana/TLS through the overlay shim.
# hyper 0.14 + hyper-rustls 0.25 are ALREADY in this crate's graph via libsql's
# default (tls) features; naming them directly lets `net::overlay::overlay_connector`
# mirror libsql's own default TLS connector (`with_native_roots().enable_http1()`)
# but wrap a SOCKS-dialing inner connector. No new lockfile crates.
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = "0.25"
tower-service = "0.3"
dotenvy = "0.15"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
# RNNoise (Rust port) — runs as a pre-APM NS stage when the user enables
# Click Suppression. Handles transients (keyboard clicks, mouse clicks)
# that APM's spectral NS misses. Default features pull in clap/dasp/hound
# for the bundled CLI; we only need the library. Pure Rust — cross-compiles
# fine; only the gated voice modules use it, so it's harmless on mobile.
nnnoiseless = { version = "0.5", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
blurhash = "0.2"
futures-util = "0.3"
# Local-loopback HTTP server for serving cached media to the webview.
# One URL pattern (`http://127.0.0.1:<port>/<token>/<hash>`) drives every
# `<img>/<audio>/<video>` element — replaces the bifurcated asset:// (images)
# / IPC-bytes-to-Blob-URL (audio/video) pair. Keeps decryption in Rust and
# gives `<video>` real Range support without pumping bytes through JSON IPC.
# `ws` feature: the loopback server also carries decoded screenshare frames
# over a WebSocket (`/screenshare/<token>`) for the Tauri/WebKitGTK WebGL
# render path — see `media_server.rs` and `commands/screenshare/remote_video.rs`.
# 0.8 (vs the 0.7 the delivery/tauri crates use) so the screenshare WS send is
# TRUE zero-copy: 0.8's `ws::Message::Binary` takes `bytes::Bytes`, letting us
# fan one decoded frame out to every subscriber via `Bytes::from_owner` over the
# shared `Arc<Vec<u8>>`. 0.7's `Message::Binary(Vec<u8>)` forces a full-res I420
# memcpy per client per frame (#480). No axum type crosses this crate's public
# boundary, so this version differing from the other crates' axum is harmless.
axum = { version = "0.8", features = ["ws"] }
# Zero-copy frame fan-out on the screenshare WS (see the axum note above): share
# the decoded `Arc<Vec<u8>>` into a `Bytes` instead of copying per subscriber.
bytes = "1"
openmls = "0.8"
openmls_traits = "0.5"
openmls_rust_crypto = "0.5"
# `test-utils` exposes `SignatureKeyPair::private()` — the ONLY accessor for the
# raw device signing seed. The overlay relay handshake (`net::overlay`) must sign
# with the SAME Ed25519 device key the cert chain certifies, so it needs the seed
# to build an `ed25519_dalek::SigningKey`. The feature adds a getter only — no
# extra crates, no behavioral change (openmls_basic_credential's `test-utils` =
# [] gates just `fn private`).
openmls_basic_credential = { version = "0.5", features = ["test-utils"] }
gethostname = "1.1.0"
# Account-key transparency: reuse the SAME shared URL-based verifier the
# `pollis-verify` auditor CLI runs (account::verify_account), so the client's
# self-audit / peer-audit can never reach a different verdict than the
# published per-user reports. Path dep on the serve layer (#330, slice E).
verifiable-log-serve = { path = "../verifiable-log-serve" }

# Desktop real-time media stack — optional, pulled in by the `media` feature
# (on by default). These have no mobile path and mobile drops voice, so a mobile
# build turns `media` off. They live here (not in a `[target.'cfg(...)']` table)
# because a target table cannot evaluate `feature = ...`; the module gates in
# `commands/mod.rs`, `state.rs`, and `realtime.rs` are keyed on `feature =
# "media"` so the feature-on cfg set reproduces today's non-mobile desktop build
# exactly.
# - livekit/libwebrtc: Rust LiveKit realtime/media engine.
# - cpal/rodio: host audio I/O for voice + sound effects.
livekit = { version = "0.7", features = ["rustls-tls-webpki-roots"], optional = true }
libwebrtc = { version = "0.3", optional = true }
cpal = { version = "0.15", optional = true }
rodio = { version = "0.19", default-features = false, features = ["wav"], optional = true }

# Vendor the WebRTC AudioProcessing module so AGC/NS/AEC are owned by us
# end-to-end and tunable from Rust. The system pkg-config build branch wants
# webrtc-audio-processing-2 >= 2.1 which most distros don't ship yet.
#
# Windows is excluded: webrtc-audio-processing-sys 2.0.4 vendors a meson +
# abseil-cpp build that has zero MSVC support upstream. iOS/Android are
# excluded for the same reason — the bundled C++ build hardcodes
# -mmacos-version-min and has no NDK path; mobile does not do voice.
# Optional + pulled in by the `media` feature (see [features]). Stays
# target-gated because the bundled C++ build has no MSVC/NDK support, so even
# with `media` on a Windows/mobile build must not attempt it. `dep:` in the
# feature is inert on these excluded targets.
[target.'cfg(not(any(target_os = "windows", target_os = "ios", target_os = "android")))'.dependencies]
webrtc-audio-processing = { version = "2", features = ["bundled"], optional = true }

# See the note above the [dependencies] table — mobile vendors OpenSSL,
# desktop links the system one.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

# iOS-only: Keychain Services so the file-backed keystore's master key lives in
# the iOS Keychain (SEP-encrypted at rest, ThisDeviceOnly → excluded from
# backups), mirroring the Android Keystore path below (issue #185 Section A).
# Version 3.x is already in the workspace lock via desktop transitives.
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "3"

# Android-only: JNI to the Android Keystore so the file-backed keystore's bytes
# are encrypted at rest under a hardware-backed AES key (issue #185 Section A).
# Only reaches the JVM (no app classes) so it needs no Context / classloader.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# macOS screen capture (ScreenCaptureKit) no longer lives in this
# process — issue #283 Phase 2 moved it into the `pollis-capture-macos`
# helper subprocess for the same uncatchable-ObjC-throw reason Linux
# capture is already a subprocess. `screencapturekit` is therefore now a
# dependency of that helper crate, not of pollis-core.

# Windows.Graphics.Capture wrapper for Windows screen share. High-level
# crate over the official `windows` bindings — gives us the system capture
# picker (equivalent to macOS SCContentSharingPicker / Linux portal), a
# free-threaded capture session, and BGRA frame buffers, without the raw
# D3D11 staging-texture/Map boilerplate. WGC needs Win10 1803+.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2"
# Raw GDI for picker thumbnail capture (BitBlt for displays,
# PrintWindow for windows). Same major windows-rs version as
# `windows-capture` 2.0 transitively pulls in so we don't duplicate the
# crate twice in the link.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    # PrintWindow lives under Storage::Xps in windows-rs (the win32metadata
    # files categorise it there because it shares plumbing with print-to-file).
    "Win32_Storage_Xps",
    # DwmGetWindowAttribute(DWMWA_CLOAKED) filters UWP frame-host shells
    # (ApplicationFrameHost) + background app windows from the picker —
    # the same trick Slack/Discord use to hide invisible top-level windows.
    "Win32_Graphics_Dwm",
    # Webcam capture (camera/start_windows.rs): Media Foundation device
    # enumeration (MFEnumDeviceSources) + IMFSourceReader capture loop, and
    # the COM apartment those calls run in. Currently consumed only by the
    # SCAFFOLD stub; the real MF capture is a TODO (#394 Windows follow-up).
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
] }

# Desktop-only crates, excluded from the mobile (iOS/Android) build:
# - nix: openpty(3) + pre_exec PTY for the in-app terminal pane. Replaced
#   portable-pty 0.9 because its `close_random_fds` post-fork sweep aborts
#   under Electron's high-FD-count renderer ("Crashing due to FD ownership
#   violation" — Rust's I/O safety guard catches close() of an OwnedFd it
#   tracks). nix is already a transitive dep via several crates; declaring
#   it explicitly with `pty` lets us call `openpty` + `Winsize` directly.
# NOTE: the LiveKit/libwebrtc engine and cpal/rodio host audio I/O used to live
# in this table (excluded on mobile via target_os). They are now optional deps
# in [dependencies] above, pulled in by the `media` feature — mobile uses the
# native LiveKit SDK (@livekit/react-native — issue #185) and drops voice, so a
# mobile build turns `media` off (`--no-default-features`) to reach the stubs.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
nix = { version = "0.30", features = ["term"] }
libc = "0.2"

# Shared capture-helper wire protocol. Both the Linux and macOS capture
# helpers are subprocesses speaking this; this is the parent-side decoder.
# The crate is platform-free (pure tokio + serde) so we include it on every
# target — the mobile screenshare/unsupported stubs reference its types in
# their signatures even though they never start a helper.
[dependencies.pollis-capture-proto]
path = "../pollis-capture-proto"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

# Overlay-wiring tests spin an in-process pollis-relay + shim and run TLS over the
# libsql-shaped SOCKS connector, verifying the cert for the REAL origin name — the
# same proof shape as `pollis-relay/tests/proof.rs` T2. rustls 0.23 / tokio-rustls
# 0.26 are already in the lockfile (reqwest + quinn); no new supply-chain crates.
[dev-dependencies]
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
