[package]
name = "pollis-delivery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pollis MLS Delivery Service: the sole writer to the MLS control-plane tables. Serializes commits per conversation (race-free, append-only by construction) and serves the contiguous commit log. Sees only opaque blobs — never plaintext or keys (RFC 9420 Delivery Service role)."

[lib]
name = "pollis_delivery"
path = "src/lib.rs"

[[bin]]
name = "pollis-delivery"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# Sole-writer access to the MLS tables in Turso. `remote` for prod; local files
# back the tests.
libsql = { version = "0.9", features = ["remote"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ulid = "1"
# Device-cert signature auth: verify the client's Ed25519 signature over a
# canonical message that binds sha256(body). Same scheme/encoding pollis-core's
# `verify_device_cert` uses (raw 32-byte pubkey, 64-byte PureEdDSA sig).
ed25519-dalek = "2"
sha2 = "0.10"
# CSPRNG for OTP codes and 256-bit session tokens (OsRng).
rand = "0.8"
# Send the OTP email via Resend (server-side; the key lives in DS env now, not
# the client build). rustls so we don't depend on the host's OpenSSL.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
# Drive the real axum router in-process (tower::ServiceExt::oneshot) and mint
# Ed25519 keypairs to sign test requests, mirroring pollis-core's device key.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
