[package]
name = "pollis-node"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "tokio_rt", "serde-json"] }
napi-derive = "2"
pollis-core = { path = "../pollis-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
napi-build = "2"
