[package]
name = "pollis"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"
default-run = "pollis"
# Disable Cargo's auto-discovery of src/bin/*.rs and examples/*.rs. Stray
# files in those directories (e.g. revived vestiges of removed binaries)
# would otherwise be compiled and break CI. Declare any real bin/example
# explicitly with [[bin]] / [[example]] below.
autobins = false
autoexamples = false

[lib]
name = "pollis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pollis"
path = "src/main.rs"

[[test]]
name = "flows"
path = "tests/flows.rs"
required-features = ["test-harness"]

[features]
# Exposes `Config::for_test()` + `InMemoryKeystore` + the `test_harness`
# module to integration tests. Pulls in `tauri/test` so `MockRuntime` is
# available. Not enabled in release builds — run the harness with
# `cargo test --features test-harness --test flows`.
test-harness = ["tauri/test"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pollis-core = { path = "../pollis-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
libsql = { version = "0.6", features = ["remote"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native", "crypto-rust"] }
base64 = "0.22"
hex = "0.4"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
once_cell = "1"
zeroize = { version = "1", features = ["derive"] }
livekit = { version = "0.7", features = ["rustls-tls-webpki-roots"] }
libwebrtc = "0.3"
cpal = "0.15"
# RNNoise (Rust port) — runs as a pre-APM NS stage when the user enables
# Click Suppression. Handles transients (keyboard clicks, mouse clicks)
# that APM's spectral NS misses. Default features pull in clap/dasp/hound
# for the bundled CLI; we only need the library.
nnnoiseless = { version = "0.5", default-features = false }
rodio = { version = "0.19", default-features = false, features = ["wav"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
blurhash = "0.2"
futures-util = "0.3"
bytes = "1"
openmls = "0.8"
openmls_traits = "0.5"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
gethostname = "1.1.0"
async-trait = "0.1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"
serial_test = "3"
tempfile = "3"

# Vendor the WebRTC AudioProcessing module so AGC/NS/AEC are owned by us
# end-to-end and tunable from Rust. The system pkg-config build branch wants
# webrtc-audio-processing-2 >= 2.1 which most distros don't ship yet.
#
# Windows is excluded: webrtc-audio-processing-sys 2.0.4 vendors a meson +
# abseil-cpp build that has zero MSVC support upstream (see
# https://github.com/tonarino/webrtc-audio-processing/issues/34, open since
# 2023). Voice still works on Windows — it just runs without AEC/AGC/NS.
# voice_apm.rs provides no-op stubs gated on this same cfg.
[target.'cfg(not(target_os = "windows"))'.dependencies]
webrtc-audio-processing = { version = "2", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_38"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

