[package]
name = "pollis"
version.workspace = true
edition = "2021"
rust-version = "1.77"
default-run = "pollis"
# Disable Cargo's auto-discovery of src/bin/*.rs and examples/*.rs. Stray
# files in those directories (e.g. revived vestiges of removed binaries)
# would otherwise be compiled and break CI. Declare any real bin/example
# explicitly with [[bin]] / [[example]] below.
autobins = false
autoexamples = false

[lib]
name = "pollis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pollis"
path = "src/main.rs"

[[test]]
name = "flows"
path = "tests/flows.rs"
required-features = ["test-harness"]

[features]
# Exposes Config::for_test() + InMemoryKeystore + the test_harness module
# to integration tests. Pulls in `tauri/test` so `MockRuntime` is available
# and `pollis-core/test-harness` so the per-client test helpers are in
# scope. Not enabled in release builds — run the harness with
# `cargo test --features test-harness --test flows`.
test-harness = ["tauri/test", "pollis-core/test-harness"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Backend logic — commands, state, keystore, db, MLS, voice/livekit, …
# All non-Tauri-runtime code lives here so future CLI / TUI / mobile
# binaries can consume it without dragging in the Tauri runtime.
pollis-core = { path = "../pollis-core" }
# Re-exported for the screenshare Tauri shim: `Selection` and
# `SourceList` are part of the public command signatures (the frontend
# sends/receives them via invoke()).
pollis-capture-proto = { path = "../pollis-capture-proto" }

tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"

# Used by lib.rs's clipboard helpers and by the #[tauri::command] shim
# wrappers. Everything else (libsql, rusqlite, openmls, livekit,
# libwebrtc, cpal, keyring, …) is owned by pollis-core now.
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "time", "macros", "io-util", "net", "process", "signal"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
dotenvy = "0.15"
# Used by src/test_harness.rs (compiled under feature = "test-harness") for
# direct Turso access + anyhow! sites; and by tests/flows.rs.
libsql = { version = "0.9", features = ["remote"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"
serial_test = "3"
tempfile = "3"
# Used directly by tests/multi_device_messaging.rs for in-process MLS
# state simulation. Production lib code reaches MLS through pollis-core.
openmls = "0.8"
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
tls_codec = "0.4"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

[target.'cfg(unix)'.dependencies]
# setrlimit(RLIMIT_NOFILE, ...) at startup so we don't hit the macOS default
# soft FD cap (256) once realtime rooms + libsql + reqwest pools + CoreAudio
# AudioUnits start consuming descriptors. Already a transitive dep; pinned
# here so the import in lib.rs resolves.
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_38"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
