[package]
name = "pollis"
version.workspace = true
edition = "2021"
rust-version = "1.77"
default-run = "pollis"
# Disable Cargo's auto-discovery of src/bin/*.rs and examples/*.rs. Stray
# files in those directories (e.g. revived vestiges of removed binaries)
# would otherwise be compiled and break CI. Declare any real bin/example
# explicitly with [[bin]] / [[example]] below.
autobins = false
autoexamples = false

[lib]
name = "pollis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pollis"
path = "src/main.rs"
# The binary is the desktop shell — it wires up wry/webkit2gtk and registers
# the media command surface. A headless build (`--no-default-features`) drops
# the shell and only compiles the lib + flows integration test on MockRuntime.
required-features = ["native-shell"]

[[test]]
name = "flows"
path = "tests/flows.rs"
required-features = ["test-harness"]

[features]
# Default = today's shipping desktop config, byte-for-byte: the native shell
# (wry + webkit2gtk + the five tauri default features), the desktop media
# stack, and the OS keychain. `--no-default-features --features test-harness`
# drops all three so the flows harness compiles + runs on MockRuntime WITHOUT
# wry/webkit2gtk and with pollis-core's media stack off (headless CI).
default = ["native-shell", "media", "os-keystore"]
# The Tauri desktop shell: the real webview runtime (wry), the five tauri
# default features that ship today, and webkit2gtk (Linux WebRTC settings).
# Gates `run()`, the window/clipboard/tray helpers, and `pub mod tray`. Pulls
# in `media` because `run()` registers the media command surface — a shell
# without media is not a shipping config.
native-shell = [
    "media",
    "tauri/wry",
    "tauri/compression",
    "tauri/common-controls-v6",
    "tauri/dynamic-acl",
    "tauri/x11",
    "dep:webkit2gtk",
]
# Desktop real-time media stack (LiveKit + libwebrtc + cpal/rodio/APM), via
# pollis-core. Gates the media command shims + their re-exports here.
media = ["pollis-core/media"]
# OS keychain backend, via pollis-core. ON by default; off drops `keyring`
# (and its libdbus-sys link) so a headless box with no dbus-1 still links.
os-keystore = ["pollis-core/os-keystore"]
# Exposes Config::for_test() + InMemoryKeystore + the test_harness module
# to integration tests. Pulls in `tauri/test` so `MockRuntime` is available
# and `pollis-core/test-harness` so the per-client test helpers are in
# scope. Not enabled in release builds — run the harness with
# `cargo test --features test-harness --test flows` (default features), or
# headless with `--no-default-features --features test-harness`.
test-harness = ["tauri/test", "pollis-core/test-harness"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Backend logic — commands, state, keystore, db, MLS, voice/livekit, …
# All non-Tauri-runtime code lives here so future CLI / TUI / mobile
# binaries can consume it without dragging in the Tauri runtime.
# default-features off so `--no-default-features` on this crate drops
# pollis-core's media + os-keystore. The `media`/`os-keystore` features here
# re-enable them via passthrough (both are in `default`), so a normal build is
# unchanged.
pollis-core = { path = "../pollis-core", default-features = false }
# Re-exported for the screenshare Tauri shim: `Selection` and
# `SourceList` are part of the public command signatures (the frontend
# sends/receives them via invoke()).
pollis-capture-proto = { path = "../pollis-capture-proto" }

# default-features off so a headless build drops wry. The five tauri default
# features (wry, compression, common-controls-v6, dynamic-acl, x11) are moved
# into `native-shell`; the three extras below stay unconditional (protocol-asset
# / tray-icon / image-png compile without wry and are used by the shims + tray).
tauri = { version = "2", default-features = false, features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"

# Used by lib.rs's clipboard helpers and by the #[tauri::command] shim
# wrappers. Everything else (libsql, rusqlite, openmls, livekit,
# libwebrtc, cpal, keyring, …) is owned by pollis-core now.
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "time", "macros", "io-util", "net", "process", "signal"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
dotenvy = "0.15"
# Used by src/test_harness.rs (compiled under feature = "test-harness") for
# direct Turso access + anyhow! sites; and by tests/flows.rs.
libsql = { version = "0.9", features = ["remote"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# default-features off (mirrors the [dependencies] entry) so the flows test
# graph stays wry-free under `--no-default-features`. Feature-unified with the
# main dep, so the default build still gets wry via `native-shell`.
tauri = { version = "2", default-features = false, features = ["test"] }
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"
serial_test = "3"
tempfile = "3"
# Model-based property fuzzer for the adversarial MLS recovery suite
# (tests/flows/model.rs): generates random op/fault/offline sequences, forces
# convergence, and asserts the bulletproof-membership invariant for all of them.
proptest = "1"
# Used directly by tests/multi_device_messaging.rs for in-process MLS
# state simulation. Production lib code reaches MLS through pollis-core.
openmls = "0.8"
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
tls_codec = "0.4"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
# In-process MLS Delivery Service for the flows harness: the real DS router
# (build_router) bound on a loopback port against the SAME test libsql file the
# clients use, so flows exercise the deployed DS submission path end to end.
pollis-delivery = { path = "../pollis-delivery" }
axum = "0.7"
# Used by the flows harness's `signed_post_status` to base64-encode the Ed25519
# request signature when driving the DS over raw HTTP (server-side authz tests).
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
# setrlimit(RLIMIT_NOFILE, ...) at startup so we don't hit the macOS default
# soft FD cap (256) once realtime rooms + libsql + reqwest pools + CoreAudio
# AudioUnits start consuming descriptors. Already a transitive dep; pinned
# here so the import in lib.rs resolves.
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Optional — pulled in by `native-shell` via `dep:webkit2gtk`. Only used by
# run()'s Linux WebRTC-settings hook, which is itself native-shell-gated.
webkit2gtk = { version = "2", features = ["v2_38"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
