[package]
name = "verifiable-log-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Serve layer for the verifiable log (Key Transparency #330): turns a signed monitor bundle into an immutable static artifact tree, a dev HTTP server, and a fetch-over-HTTP remote verifier. Slice 3."

[lib]
name = "verifiable_log_serve"
path = "src/lib.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

# Verification-only CLI shipped to auditors (operator commands live in `serve`).
[[bin]]
name = "pollis-verify"
path = "src/bin/pollis-verify.rs"

[dependencies]
# Slice 1: Merkle/STH/proof core and its verifiers — depended on, never reimplemented.
verifiable-log = { path = "../verifiable-log" }
# Slice 2: the mls-commit-log tenant — reuse its CommitLeaf decoding and the
# CommitLogInvariant (fork + epoch-regression) for per-group verification.
# Never reimplement either here.
verifiable-log-builder = { path = "../verifiable-log-builder" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
# Tiny blocking HTTP server for the local dev/demo host.
tiny_http = "0.12"
# Blocking HTTP client for the remote verifier. The "tls" feature pulls in
# rustls + webpki-roots so auditors can verify a live https:// URL (e.g.
# https://verify.pollis.com), not just loopback http://. "socks-proxy" lets the
# agent dial through the closed-overlay SOCKS5 shim so the transparency VERIFY
# path hides the client IP from the first-party host (design §14.4).
ureq = { version = "2", default-features = false, features = ["tls", "socks-proxy"] }
# Live mode: hold the Ed25519 signing key and drive the async libSQL read.
ed25519-dalek = "2.1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
verifiable-log = { path = "../verifiable-log" }
# Seed local libSQL fixture DBs for the live-mode tests (no network).
libsql = { version = "0.9", features = ["remote"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Spin an in-process relay + SOCKS5 shim to prove the overlay proxy plumbing:
# that `build_agent(Some(shim))` really dials the origin THROUGH the relay.
pollis-relay = { path = "../pollis-relay" }
